# ooai

./: README.md  pyproject.toml
ooai/: app.py  gpt4all.py  types.py
